[gd_scene load_steps=48 format=3 uid="uid://biaimvygk8r3f"]

[ext_resource type="Texture2D" uid="uid://br8fltx8mhio" path="res://assets/textures/level/seabed_bg.png" id="1_aeqvq"]
[ext_resource type="Script" uid="uid://byhpdtpqgv2x5" path="res://scripts/victory.gd" id="1_wdhy8"]
[ext_resource type="Texture2D" uid="uid://yqvus5wdpfom" path="res://assets/textures/level/currents_parallax.png" id="2_rlw0o"]
[ext_resource type="Texture2D" uid="uid://bjy5na53effsw" path="res://assets/textures/level/seabed_playarea.png" id="3_m35g4"]
[ext_resource type="Texture2D" uid="uid://dulngok2xfjyr" path="res://assets/textures/level/sea_floor_fauna.png" id="4_wdhy8"]
[ext_resource type="Texture2D" uid="uid://dgb36hfijxjf1" path="res://assets/textures/effects/2d_lights_and_shadows_neutral_point_light.png" id="5_0ya2q"]
[ext_resource type="Texture2D" uid="uid://71baonpavm2t" path="res://assets/textures/effects/thruster_trail_sheet.png" id="6_w13b5"]
[ext_resource type="Texture2D" uid="uid://c121oas5df1vs" path="res://assets/textures/level/seabed_fg.png" id="7_0iwmx"]
[ext_resource type="Texture2D" uid="uid://c1vsexbykefwl" path="res://assets/textures/level/big_sub.png" id="8_bqyga"]
[ext_resource type="Texture2D" uid="uid://v8q4auewvljj" path="res://assets/textures/effects/ies_lights_model1.png" id="9_fgp87"]
[ext_resource type="Texture2D" uid="uid://ccn0ikslju12v" path="res://assets/textures/effects/2d_point_light.png" id="10_c0tw7"]
[ext_resource type="Texture2D" uid="uid://b52loa0ba8u2j" path="res://assets/textures/entity/big_floater.png" id="11_m35g4"]
[ext_resource type="Texture2D" uid="uid://crpnnm0l8ilj3" path="res://assets/textures/entity/floater_green.png" id="12_wdhy8"]
[ext_resource type="AudioStream" uid="uid://wcp474nrs7sr" path="res://assets/sounds/win_tone.wav" id="14_w13b5"]
[ext_resource type="Texture2D" uid="uid://qq6n2y0wj6b4" path="res://assets/textures/ui/ui_sheet.png" id="15_0iwmx"]
[ext_resource type="AudioStream" uid="uid://w8haihg82vm3" path="res://assets/sounds/button_off.wav" id="16_bqyga"]
[ext_resource type="AudioStream" uid="uid://dpfywfd3ilogs" path="res://assets/sounds/button_click_on.wav" id="17_fgp87"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qunh1"]
atlas = ExtResource("4_wdhy8")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts1t5"]
atlas = ExtResource("4_wdhy8")
region = Rect2(32, 40, 32, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7132d"]
atlas = ExtResource("4_wdhy8")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_06a2a"]
atlas = ExtResource("4_wdhy8")
region = Rect2(48, 16, 16, 16)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_aeqvq"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_rlw0o"]
offsets = PackedFloat32Array(0, 0.446494, 0.870849)
colors = PackedColorArray(1, 1, 1, 1, 0.980392, 0.980392, 0.980392, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_wpjcc"]
_limits = [0.0, 200.0, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.784512, 0.547943), 0.0, 0.0, 0, 0, Vector2(1, 123.425), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Animation" id="Animation_filmp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sub_Anim/submersible:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(381, -45)]
}

[sub_resource type="Animation" id="Animation_twbv7"]
resource_name = "sub_float"
length = 16.0
loop_mode = 1
step = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sub_Anim/submersible:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(7, 8, 15, 16),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(381, -27), Vector2(381, -27), Vector2(381, -48), Vector2(381, -48)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2sdhq"]
_data = {
&"RESET": SubResource("Animation_filmp"),
&"sub_float": SubResource("Animation_twbv7")
}

[sub_resource type="Environment" id="Environment_0quce"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.0
glow_hdr_threshold = 1.5

[sub_resource type="Animation" id="Animation_w13b5"]
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("Big_Floater_Anim/big_floater:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(38, 57), Vector2(38, 65)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("Big_Floater_Anim/big_floater:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 128, 32, 64), Rect2(0, 64, 32, 64), Rect2(0, 128, 32, 64), Rect2(0, 192, 32, 64), Rect2(0, 0, 32, 64), Rect2(0, 64, 32, 64), Rect2(0, 128, 32, 64), Rect2(0, 192, 32, 64), Rect2(0, 0, 32, 64), Rect2(0, 64, 32, 64), Rect2(0, 128, 32, 64), Rect2(0, 192, 32, 64)]
}

[sub_resource type="Animation" id="Animation_0ya2q"]
resource_name = "float"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Big_Floater_Anim/big_floater:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(38, 57), Vector2(38, 65)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Big_Floater_Anim/big_floater:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 128, 32, 64), Rect2(0, 64, 32, 64), Rect2(0, 128, 32, 64), Rect2(0, 192, 32, 64), Rect2(0, 0, 32, 64), Rect2(0, 64, 32, 64), Rect2(0, 128, 32, 64), Rect2(0, 192, 32, 64), Rect2(0, 0, 32, 64), Rect2(0, 64, 32, 64), Rect2(0, 128, 32, 64), Rect2(0, 192, 32, 64)]
}

[sub_resource type="Animation" id="Animation_0iwmx"]
resource_name = "idle"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bqyga"]
_data = {
&"RESET": SubResource("Animation_w13b5"),
&"float": SubResource("Animation_0ya2q"),
&"idle": SubResource("Animation_0iwmx")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_fgp87"]
atlas = ExtResource("11_m35g4")
region = Rect2(0, 128, 32, 64)

[sub_resource type="Animation" id="Animation_qunh1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Floater_Anim/floater:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(450, 51)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Floater_Anim/floater:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(0, 0, 16, 32)]
}

[sub_resource type="Animation" id="Animation_c0tw7"]
resource_name = "float"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Floater_Anim/floater:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(450, 51), Vector2(450, 40)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Floater_Anim/floater:texture:region")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Rect2(0, 0, 16, 32), Rect2(16, 0, 16, 32), Rect2(0, 0, 16, 32), Rect2(16, 0, 16, 32), Rect2(0, 0, 16, 32), Rect2(16, 0, 16, 32), Rect2(0, 0, 16, 32), Rect2(16, 0, 16, 32), Rect2(0, 0, 16, 32), Rect2(16, 0, 16, 32), Rect2(0, 0, 16, 32), Rect2(16, 0, 16, 32)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ts1t5"]
_data = {
&"RESET": SubResource("Animation_qunh1"),
&"float": SubResource("Animation_c0tw7")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_wpjcc"]
atlas = ExtResource("12_wdhy8")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqyga"]
atlas = ExtResource("15_0iwmx")
region = Rect2(0, 256, 224, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0tw7"]
atlas = ExtResource("15_0iwmx")
region = Rect2(0, 224, 224, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlk3v"]
atlas = ExtResource("15_0iwmx")
region = Rect2(0, 288, 224, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpjcc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqyga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0tw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqyga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlk3v")
}],
"loop": true,
"name": &"default",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_twbv7"]
atlas = ExtResource("15_0iwmx")
region = Rect2(0, 368, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_filmp"]
atlas = ExtResource("15_0iwmx")
region = Rect2(256, 48, 144, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sdhq"]
atlas = ExtResource("15_0iwmx")
region = Rect2(544, 48, 144, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0quce"]
atlas = ExtResource("15_0iwmx")
region = Rect2(400, 48, 144, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehqec"]
atlas = ExtResource("15_0iwmx")
region = Rect2(256, 48, 144, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilahp"]
atlas = ExtResource("15_0iwmx")
region = Rect2(144, 368, 16, 32)

[node name="Victory" type="Node"]
script = ExtResource("1_wdhy8")

[node name="seafloor_bg" type="Sprite2D" parent="."]
texture = ExtResource("1_aeqvq")
centered = false

[node name="currents" type="Parallax2D" parent="."]
z_index = 2
repeat_size = Vector2(960, 540)
autoscroll = Vector2(1, 0.5)
repeat_times = 2

[node name="currents_image" type="Sprite2D" parent="currents"]
modulate = Color(1, 1, 1, 0.196078)
texture = ExtResource("2_rlw0o")
centered = false

[node name="seafloor_mg" type="Sprite2D" parent="."]
texture = ExtResource("3_m35g4")
centered = false

[node name="sealife_group" type="Node2D" parent="."]

[node name="floater_bud_small" type="Sprite2D" parent="sealife_group"]
position = Vector2(23, 190)
texture = SubResource("AtlasTexture_qunh1")

[node name="floater_bud_small2" type="Sprite2D" parent="sealife_group"]
position = Vector2(5, 184)
texture = SubResource("AtlasTexture_qunh1")
flip_h = true

[node name="sealife1" type="Sprite2D" parent="sealife_group"]
position = Vector2(116, 191)
texture = SubResource("AtlasTexture_ts1t5")

[node name="sealife2" type="Sprite2D" parent="sealife_group"]
position = Vector2(405, 182)
texture = SubResource("AtlasTexture_ts1t5")
flip_h = true

[node name="sealife3" type="Sprite2D" parent="sealife_group"]
position = Vector2(145, 242)
texture = SubResource("AtlasTexture_ts1t5")
flip_h = true

[node name="sealife4" type="Sprite2D" parent="sealife_group"]
position = Vector2(366, 187)
texture = SubResource("AtlasTexture_ts1t5")

[node name="sealife5" type="Sprite2D" parent="sealife_group"]
position = Vector2(57, 246)
texture = SubResource("AtlasTexture_ts1t5")

[node name="sealife6" type="Sprite2D" parent="sealife_group"]
position = Vector2(469, 248)
texture = SubResource("AtlasTexture_ts1t5")

[node name="floater_buds" type="Sprite2D" parent="sealife_group"]
position = Vector2(14, 175)
texture = SubResource("AtlasTexture_7132d")

[node name="Light" type="PointLight2D" parent="sealife_group/floater_buds"]
position = Vector2(6, -7)
color = Color(0.722702, 0.999442, 0.675061, 1)
energy = 0.8
texture = ExtResource("5_0ya2q")
offset = Vector2(0, 4)
texture_scale = 0.6

[node name="floater_buds2" type="Sprite2D" parent="sealife_group"]
position = Vector2(469, 167)
texture = SubResource("AtlasTexture_7132d")
flip_h = true

[node name="Light" type="PointLight2D" parent="sealife_group/floater_buds2"]
position = Vector2(-6, -7)
color = Color(0.722702, 0.999442, 0.675061, 1)
energy = 0.8
texture = ExtResource("5_0ya2q")
offset = Vector2(0, 4)
texture_scale = 0.6

[node name="floater_buds3" type="Sprite2D" parent="sealife_group"]
position = Vector2(284, 235)
texture = SubResource("AtlasTexture_7132d")

[node name="Light" type="PointLight2D" parent="sealife_group/floater_buds3"]
position = Vector2(6, -8)
color = Color(0.722702, 0.999442, 0.675061, 1)
energy = 0.8
texture = ExtResource("5_0ya2q")
offset = Vector2(0, 4)
texture_scale = 0.6

[node name="floater_buds4" type="Sprite2D" parent="sealife_group"]
position = Vector2(194, 188)
texture = SubResource("AtlasTexture_7132d")
flip_h = true

[node name="Light" type="PointLight2D" parent="sealife_group/floater_buds4"]
position = Vector2(6, -7)
color = Color(0.722702, 0.999442, 0.675061, 1)
energy = 0.8
texture = ExtResource("5_0ya2q")
offset = Vector2(0, 4)
texture_scale = 0.6

[node name="floater_bud_small3" type="Sprite2D" parent="sealife_group"]
position = Vector2(267, 237)
texture = SubResource("AtlasTexture_qunh1")

[node name="floater_bud_small4" type="Sprite2D" parent="sealife_group"]
position = Vector2(181, 202)
texture = SubResource("AtlasTexture_qunh1")

[node name="floater_bud_small5" type="Sprite2D" parent="sealife_group"]
position = Vector2(475, 183)
texture = SubResource("AtlasTexture_qunh1")

[node name="floater_bud_small6" type="Sprite2D" parent="sealife_group"]
position = Vector2(208, 207)
texture = SubResource("AtlasTexture_qunh1")
flip_h = true

[node name="floater_bud_small7" type="Sprite2D" parent="sealife_group"]
position = Vector2(468, 191)
texture = SubResource("AtlasTexture_qunh1")

[node name="floater_bud_small8" type="Sprite2D" parent="sealife_group"]
position = Vector2(447, 175)
texture = SubResource("AtlasTexture_qunh1")
flip_h = true

[node name="floater_bud_cluster" type="Sprite2D" parent="sealife_group"]
position = Vector2(12, 192)
texture = SubResource("AtlasTexture_06a2a")

[node name="floater_bud_cluster2" type="Sprite2D" parent="sealife_group"]
position = Vector2(45, 183)
texture = SubResource("AtlasTexture_06a2a")
flip_h = true

[node name="floater_bud_cluster3" type="Sprite2D" parent="sealife_group"]
position = Vector2(458, 181)
texture = SubResource("AtlasTexture_06a2a")
flip_h = true

[node name="floater_bud_cluster4" type="Sprite2D" parent="sealife_group"]
position = Vector2(171, 195)
texture = SubResource("AtlasTexture_06a2a")

[node name="floater_bud_cluster5" type="Sprite2D" parent="sealife_group"]
position = Vector2(277, 240)
texture = SubResource("AtlasTexture_06a2a")

[node name="floater_bud_cluster6" type="Sprite2D" parent="sealife_group"]
position = Vector2(0, 200)
texture = SubResource("AtlasTexture_06a2a")
flip_h = true

[node name="floater_bud_cluster7" type="Sprite2D" parent="sealife_group"]
position = Vector2(476, 198)
texture = SubResource("AtlasTexture_06a2a")

[node name="chimney_bubbles_group" type="Node2D" parent="."]

[node name="chimney_bubbles" type="CPUParticles2D" parent="chimney_bubbles_group"]
material = SubResource("CanvasItemMaterial_aeqvq")
position = Vector2(34, 191)
amount = 12
texture = ExtResource("6_w13b5")
lifetime = 3.5
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 3.0
direction = Vector2(0, -1)
gravity = Vector2(0, -50)
damping_min = 20.0
damping_max = 20.0
angle_max = 360.0
color_ramp = SubResource("Gradient_rlw0o")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("Curve_wpjcc")
anim_offset_max = 0.3

[node name="chimney_bubbles2" type="CPUParticles2D" parent="chimney_bubbles_group"]
material = SubResource("CanvasItemMaterial_aeqvq")
position = Vector2(92, 226)
amount = 12
texture = ExtResource("6_w13b5")
lifetime = 3.5
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 3.0
direction = Vector2(0, -1)
gravity = Vector2(0, -50)
damping_min = 20.0
damping_max = 20.0
angle_max = 360.0
color_ramp = SubResource("Gradient_rlw0o")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("Curve_wpjcc")
anim_offset_max = 0.3

[node name="chimney_bubbles3" type="CPUParticles2D" parent="chimney_bubbles_group"]
material = SubResource("CanvasItemMaterial_aeqvq")
position = Vector2(319, 138)
amount = 12
texture = ExtResource("6_w13b5")
lifetime = 3.5
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 3.0
direction = Vector2(0, -1)
gravity = Vector2(0, -50)
damping_min = 20.0
damping_max = 20.0
angle_max = 360.0
color_ramp = SubResource("Gradient_rlw0o")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("Curve_wpjcc")
anim_offset_max = 0.3

[node name="chimney_bubbles4" type="CPUParticles2D" parent="chimney_bubbles_group"]
material = SubResource("CanvasItemMaterial_aeqvq")
position = Vector2(352, 156)
amount = 12
texture = ExtResource("6_w13b5")
lifetime = 3.5
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 3.0
direction = Vector2(0, -1)
gravity = Vector2(0, -50)
damping_min = 20.0
damping_max = 20.0
angle_max = 360.0
color_ramp = SubResource("Gradient_rlw0o")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("Curve_wpjcc")
anim_offset_max = 0.3

[node name="chimney_bubbles5" type="CPUParticles2D" parent="chimney_bubbles_group"]
material = SubResource("CanvasItemMaterial_aeqvq")
position = Vector2(429, 202)
amount = 12
texture = ExtResource("6_w13b5")
lifetime = 3.5
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 3.0
direction = Vector2(0, -1)
gravity = Vector2(0, -50)
damping_min = 20.0
damping_max = 20.0
angle_max = 360.0
color_ramp = SubResource("Gradient_rlw0o")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("Curve_wpjcc")
anim_offset_max = 0.3

[node name="chimney_bubbles6" type="CPUParticles2D" parent="chimney_bubbles_group"]
material = SubResource("CanvasItemMaterial_aeqvq")
position = Vector2(86, 169)
amount = 12
texture = ExtResource("6_w13b5")
lifetime = 3.5
lifetime_randomness = 0.5
emission_shape = 2
emission_sphere_radius = 3.0
direction = Vector2(0, -1)
gravity = Vector2(0, -50)
damping_min = 20.0
damping_max = 20.0
angle_max = 360.0
color_ramp = SubResource("Gradient_rlw0o")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_speed_curve = SubResource("Curve_wpjcc")
anim_offset_max = 0.3

[node name="seafloor_fg" type="Sprite2D" parent="."]
z_index = 3
texture = ExtResource("7_0iwmx")
centered = false

[node name="Sub_Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2sdhq")
}

[node name="submersible" type="Sprite2D" parent="Sub_Anim"]
z_index = 1
position = Vector2(381, -45)
rotation = 1.5708
texture = ExtResource("8_bqyga")
centered = false
flip_v = true

[node name="spotlight" type="PointLight2D" parent="Sub_Anim/submersible"]
position = Vector2(240, 24)
rotation = 3.14159
texture = ExtResource("9_fgp87")
texture_scale = 0.5

[node name="radiallight" type="PointLight2D" parent="Sub_Anim/submersible"]
position = Vector2(240, 135)
energy = 0.33
texture = ExtResource("10_c0tw7")
texture_scale = 1.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0quce")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.00784314, 0.00784314, 0.0509804, 1)

[node name="Big_Floater_Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bqyga")
}

[node name="big_floater" type="Sprite2D" parent="Big_Floater_Anim"]
position = Vector2(38, 57)
texture = SubResource("AtlasTexture_fgp87")
centered = false

[node name="Light" type="PointLight2D" parent="Big_Floater_Anim/big_floater"]
position = Vector2(19, 23)
color = Color(0.722702, 0.999442, 0.675061, 1)
energy = 0.8
texture = ExtResource("5_0ya2q")
offset = Vector2(0, 4)
texture_scale = 0.35

[node name="Floater_Anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ts1t5")
}

[node name="floater" type="Sprite2D" parent="Floater_Anim"]
position = Vector2(450, 51)
texture = SubResource("AtlasTexture_wpjcc")

[node name="Light" type="PointLight2D" parent="Floater_Anim/floater"]
position = Vector2(0, -9)
color = Color(0.722702, 0.999442, 0.675061, 1)
energy = 0.6
texture = ExtResource("5_0ya2q")
offset = Vector2(0, 4)
texture_scale = 0.2

[node name="MissionAccomplished" type="AnimatedSprite2D" parent="."]
z_index = 6
position = Vector2(240, 138)
sprite_frames = SubResource("SpriteFrames_wpjcc")
frame_progress = 0.576095

[node name="Label" type="Label" parent="MissionAccomplished"]
offset_left = -87.0
offset_top = -7.0
offset_right = 87.0
offset_bottom = 22.0
text = "CONTACT! MISSION ACCOMPLISHED!"

[node name="DepthMeter" type="TextureRect" parent="."]
z_index = 6
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -55.0
offset_right = 24.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_twbv7")

[node name="Label" type="Label" parent="DepthMeter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "10000m"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BaseCampButton" type="TextureButton" parent="."]
z_index = 5
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -261.0
offset_top = -177.0
offset_right = -117.0
offset_bottom = -137.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_filmp")
texture_pressed = SubResource("AtlasTexture_2sdhq")
texture_hover = SubResource("AtlasTexture_0quce")
flip_h = true

[node name="Label" type="Label" parent="BaseCampButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 64.0
offset_top = 8.0
offset_right = 64.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "Base Camp"

[node name="TextLight" type="PointLight2D" parent="."]
position = Vector2(240, 104)
energy = 0.5
texture = ExtResource("10_c0tw7")
texture_scale = 0.8

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_w13b5")

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_bqyga")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_fgp87")

[node name="ResearchBG" type="Sprite2D" parent="."]
z_index = 5
position = Vector2(191, 109)
texture = SubResource("AtlasTexture_ehqec")

[node name="Label" type="Label" parent="ResearchBG"]
offset_left = -29.0
offset_top = -8.0
offset_right = 11.0
offset_bottom = 5.0
text = "+100"

[node name="Sprite2D" type="Sprite2D" parent="ResearchBG"]
position = Vector2(-42, 0)
texture = SubResource("AtlasTexture_ilahp")

[connection signal="mouse_entered" from="BaseCampButton" to="." method="_on_base_camp_button_mouse_entered"]
[connection signal="pressed" from="BaseCampButton" to="." method="_on_base_camp_button_pressed"]
